# persistent-mind-model-v1.0

./: .env.example  .env.gpu  .gitignore  .pre-commit-config.yaml  <pmm.storage.eventlog.EventLog object at 0x7376f54eb020>  <pmm.storage.eventlog.EventLog object at 0x781c318d2060>  =0.22.0  AGENTS.md  AI_CENTRIC_README.md  BULLSHIT-ANALYSIS.md  CHANGELOG.md  CONTEXT-BANDIT-IMPLEMENTATION.md  CONTRIBUTING.md  CONVERSATIONAL_FIX.md  FINAL_STATUS.md  IMB-LOCAL-GRANITE-CHAT-PMM-UPGRADE.txt  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PHASE-2-COMPLETE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PMM v1 1 Development-fixes.md  PMM_ENHANCEMENT_ANALYSIS.md  PMM_INTROSPECTIVE_AGENCY_REPORT.md  README.md  READY-TO-SHIP.md  REGEX_REMOVAL_PROGRESS.md  RELEASE-NOTES-v1.0.0.md  SHIP-CHECKLIST.md  STATUS.md  WEEK-1-PLAN.md  __default__-shm  __default__-wal  _pmm_probe.txt  analysis_report.md  analyze_reflections.py  analyze_reflections_results.txt  chat_session_2025-11-16_01-14-17_small_telemetry.md  check_vector_mismatch.py  debug_metrics.py  (+28 more)
.data/: pmm.db
.logs/: events.json
.logs_run_1/: memory_summary.txt  snapshot.json
archive/: EVIDENCE-MATRIX.md  EXTERNAL_ANALYSIS_RESPONSE.md  FOUNDATIONS.md  METHODS.md  SEQUENCES.md  VERIFICATION_ACTION_ITEMS.md  VERIFICATION_SUMMARY.md
dev-progress-docs/: COMMITMENT-SYSTEM-ANALYSIS.md  EMBEDDING_FIX_SUMMARY.md  PRODUCT-ROADMAP.md
docs/: 00-Persistent Mind Model -Question Pack-(Introspection-Framework).md  00_THE_LEDGER_IS_THE_MIND.md  01-Introduction-to-the-Persistent-Mind-Model.md  02-ARCHITECTURE.md  03-WHY-PMM-MATTERS.md  04-TECHNICAL-COMPARISON.md  05-IBM-Granite-Chat.md  05-MEMEGRAPH-VISIBILITY.md  06-GPT_oss-chat.md  06-MEMEGRAPH-VISIBILITY.md  07-GPT_oss-Telemetry.md  08-GPT_oss-Smaller_Telemetry.md  ABLATION-STUDIES.md  COMMITMENT-BUG-FIX.md  CONTINUING-MONOLITHIC-REFACTOR.md  DOCUMENTATION-CORRECTIONS-2025-10-04.md  GPT-5.1-chat-proof.md  GPT-5.1-telemetry.md  HANDOFF-2025-10-04.md  IMB-Granite-Chat.md  IMPLEMENTATION_STATUS.md  PERFORMANCE-FIX-QUICKSTART.md  PHASE2-COMPLETE.md  PHASE2.md  PMM-COGNITIVE-CHARTER.md  PMM-SYSTEM-GUIDE.md  Persistent Mind Model - Ollama GPT-oss 120b-cloud.md  README.md  REALISTIC-HANDOFF-2025-10-04.md  REFACTOR-TODO.md  REPRODUCIBILITY.md  SEMANTIC-CONTEXT-FIX.md  SESSION-FINAL-2025-10-04.md  (+29 more)
(+898 files in other folders)
