[project]
name = "persistent-mind-model"
version = "0.0.0"
description = "PMM refactor scaffold: persistent, model-agnostic AI mind (skeleton)."
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.24.0",
  "matplotlib>=3.6.0",
  "ollama>=0.5.0",
  "openai>=1.0.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.4.0",
  "isort>=5.12.0",
  "pre-commit>=3.3.0",
  "uvicorn>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["pmm*"]
exclude = ["pmm_recovery_pack*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120  # Increased from 100 to reduce noise
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "TID"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"re" = { msg = "Regex is not allowed in PMM runtime. Use pmm/utils/parsers.py instead." }

[tool.ruff.lint.per-file-ignores]
# Allow regex in test helpers and scripts only
"tests/*" = ["TID251", "E501"]
"scripts/*" = ["TID251", "E501"]
