[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pmm"
version = "2.0.0"
description = "Persistent Mind Model"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0",
]
full = [
    "openai>=1.0.0",
]

[project.scripts]
pmm = "pmm.runtime.cli:main"
