[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pmm"
version = "2.0.0"
description = "Persistent Mind Model"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
full = [
    "openai>=1.0.0",
    "pytest>=7.0",
]

[project.scripts]
pmm = "pmm.runtime.cli:main"
